src/index.css
@import "tailwindcss";

/*
  The default border color has changed to `currentColor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentColor);
  }
}

@utility no-scrollbar {
  @layer utilities {
    /* Hide scrollbar for Chrome, Safari and Opera */
    &::-webkit-scrollbar {
      display: none;
    }
    /* Hide scrollbar for IE, Edge and Firefox */
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
  }
}

@utility yes-scrollbar {
  @layer utilities {
    &::-webkit-scrollbar-track {
      border-radius: 10px;
      background-color: #f5f5f5;
    }

    &::-webkit-scrollbar {
      width: 12px;
      border-radius: 10px;
      background-color: #f5f5f5;
    }

    &::-webkit-scrollbar-thumb {
      border-radius: 10px;
      background: linear-gradient(
        90deg,
        rgba(193, 87, 255, 1) 0%,
        rgba(255, 23, 79, 1) 52%,
        rgba(255, 171, 17, 1) 100%
      );
    }
  }
}

@utility shadow {
  @layer utilities {
    box-shadow: -4px -12px 12px -2px rgba(0, 0, 0, 0.05) inset;
  }
}

@layer utilities {
  /* montserrat-latin-wght-normal */
  @font-face {
    font-family: "Montserrat Variable";
    font-style: normal;
    font-display: swap;
    font-weight: 100 900;
    src: url(https://cdn.jsdelivr.net/fontsource/fonts/montserrat:vf@latest/latin-wght-normal.woff2)
      format("woff2-variations");
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
      U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122,
      U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
  }
}

@layer utilities {
  @layer utilities {
    html::-webkit-scrollbar {
      width: 10px;
      background-color: #f5f5f5;
    }

    html::-webkit-scrollbar-thumb {
      border-radius: 10px;
      background: linear-gradient(
        180deg,
        rgba(193, 87, 255, 1) 0%,
        rgba(255, 23, 79, 1) 52%,
        rgba(255, 171, 17, 1) 100%
      );
    }
  }
}

:root {
  font-family: "Montserrat Variable", sans-serif;
  line-height: 1.5;
  font-weight: 400;
  color-scheme: light dark;
  color: rgba(12, 12, 12, 0.87);
  background-color: #ffffff;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

